--- a/ui/html/home.page.tmpl
+++ b/ui/html/home.page.tmpl
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <h1><a href='/'>YouTube 影音下載工具</a></h1>
+            <h1><a href='/'>YouTube 下載工具</a></h1>
         </header>
 
         <main>
